--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
       <version>4.13</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.jruby/jruby-complete -->
+    <dependency>
+      <groupId>org.jruby</groupId>
+      <artifactId>jruby-complete</artifactId>
+      <version>9.4.8.0</version>
+    </dependency>
   </dependencies>
 
   <build>
