--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,12 @@
       <version>4.13</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jline</groupId>
+      <artifactId>jline</artifactId>
+      <version>3.26.2</version>
+    </dependency>
   </dependencies>
-
   <build>
     <plugins>
       <plugin>
