feat: add ascii table for the rankings

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
       <artifactId>jline</artifactId>
       <version>3.26.2</version>
     </dependency>
+    <dependency>
+      <groupId>de.vandermeer</groupId>
+      <artifactId>asciitable</artifactId>
+      <version>0.3.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
