feat: add draft lexicographic closure

--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
   <properties>
     <!-- https://maven.apache.org/general.html#encoding-warning -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>22</java.version>
-    <maven.compiler.release>18</maven.compiler.release>
+    <!-- <java.version>22</java.version> -->
+    <maven.compiler.release>17</maven.compiler.release>
     <frontend.app.dir>${project.basedir}/src/main/web</frontend.app.dir>
     <main.class>com.extrc.App</main.class>
     <node.version>v20.16.0</node.version>
