--- a/src/main/web/package.json
+++ b/src/main/web/package.json
@@ -23,9 +23,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "katex": "^0.16.11",
+    "lucide-react": "^0.426.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
