--- a/src/main/web/package.json
+++ b/src/main/web/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@types/katex": "^0.16.7",
+    "@types/node": "^22.2.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
