--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,23 +12,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
       - name: Set up JDK 21
-      - uses: actions/setup-java@v4
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin' 
           java-version: '21'
+          
       - name: Build and test
         run: mvn clean install
         
   deploy:
     name: Deploy to Fly
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
             
       - name: Setup flyctl
-        uses: superfly/flyctl-actions/setup-flyctl@master
+        uses: superfly/flyctl-actions/setup-flyctl@v1
 
       - name: Deploy
         run: flyctl deploy
