--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- <java.version>22</java.version> -->
     <maven.compiler.release>18</maven.compiler.release>
+    <maven.compiler.source>18</maven.compiler.source>
+    <maven.compiler.target>18</maven.compiler.target>
     <frontend.app.dir>${project.basedir}/src/main/web</frontend.app.dir>
     <main.class>com.extrc.App</main.class>
     <node.version>v20.16.0</node.version>
