--- a/.dockerignore
+++ b/.dockerignore
@@ -1,51 +1,51 @@
 # flyctl launch added from .gitignore
-# **\target
-**\pom.xml.tag
-**\pom.xml.releaseBackup
-**\pom.xml.versionsBackup
-**\pom.xml.next
-**\release.properties
-**\dependency-reduced-pom.xml
-**\buildNumber.properties
-**\.mvn\timing.properties
+# **/target
+**/pom.xml.tag
+**/pom.xml.releaseBackup
+**/pom.xml.versionsBackup
+**/pom.xml.next
+**/release.properties
+**/dependency-reduced-pom.xml
+**/buildNumber.properties
+**/.mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
-**\.mvn\wrapper\maven-wrapper.jar
+**/.mvn/wrapper/maven-wrapper.jar
 
 # Eclipse m2e generated files
 # Eclipse Core
-**\.project
+**/.project
 # JDT-specific (Eclipse Java Development Tools)
-**\.classpath
+**/.classpath
 
 # vscode
-**\.vscode
+**/.vscode
 
-# flyctl launch added from src\main\web\.gitignore
+# flyctl launch added from src/main/web/.gitignore
 # Logs
-src\main\web\**\logs
-src\main\web\**\*.log
-src\main\web\**\npm-debug.log*
-src\main\web\**\yarn-debug.log*
-src\main\web\**\yarn-error.log*
-src\main\web\**\pnpm-debug.log*
-src\main\web\**\lerna-debug.log*
+src/main/web/**/logs
+src/main/web/**/*.log
+src/main/web/**/npm-debug.log*
+src/main/web/**/yarn-debug.log*
+src/main/web/**/yarn-error.log*
+src/main/web/**/pnpm-debug.log*
+src/main/web/**/lerna-debug.log*
 
-src\main\web\**\node_modules
-src\main\web\**\dist
-src\main\web\**\dist-ssr
-src\main\web\**\*.local
+src/main/web/**/node_modules
+src/main/web/**/dist
+src/main/web/**/dist-ssr
+src/main/web/**/*.local
 
 # Editor directories and files
-src\main\web\**\.vscode\*
-!src\main\web\**\.vscode\extensions.json
-src\main\web\**\.idea
-src\main\web\**\.DS_Store
-src\main\web\**\*.suo
-src\main\web\**\*.ntvs*
-src\main\web\**\*.njsproj
-src\main\web\**\*.sln
-src\main\web\**\*.sw?
+src/main/web/**/.vscode/*
+!src/main/web/**/.vscode/extensions.json
+src/main/web/**/.idea
+src/main/web/**/.DS_Store
+src/main/web/**/*.suo
+src/main/web/**/*.ntvs*
+src/main/web/**/*.njsproj
+src/main/web/**/*.sln
+src/main/web/**/*.sw?
 
-# flyctl launch added from src\main\web\node_modules\.pnpm\tailwindcss@3.4.7\node_modules\tailwindcss\stubs\.gitignore
-!src\main\web\node_modules\.pnpm\tailwindcss@3.4.7\node_modules\tailwindcss\stubs\**\*
+# flyctl launch added from src/main/web/node_modules/.pnpm/tailwindcss@3.4.7/node_modules/tailwindcss/stubs/.gitignore
+!src/main/web/node_modules/.pnpm/tailwindcss@3.4.7/node_modules/tailwindcss/stubs/**/*
 fly.toml
