--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,28 @@
-name: Deploy main to Fly
+name: Java CI/CD with Maven and Fly.io
 on:
   push:
-    branches: [ main ]
+    branches: [ master, main ]  
+  workflow_dispatch:
 
-env:
-  FLY_API_TOKEN: ${{ secrets.FLY_TOKEN }}
-
-jobs:       
+jobs:
   deploy:
-    name: Deploy to Fly
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v4
+        
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin' 
-          java-version: '21'
-          
-      - name: Build and test
-        run: mvn clean package
-        
-      - name: Checkout code
-        uses: actions/checkout@v4
-            
-      - name: Setup flyctl
-        uses: superfly/flyctl-actions/setup-flyctl@v1
+            distribution: 'temurin' 
+            java-version: '21'
+            cache: maven
 
-      - name: Deploy
-        run: flyctl deploy
+      - name: Build with Maven
+        run: mvn clean package
+
+      - name: Deploy app to fly.io
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: flyctl deploy --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_TOKEN }}
